@@ -1,4 +1,6 @@
 DIST libcanberra-0.10.tar.gz 826222 RMD160 9bc56b05dadb6a2fe184cca69396c693b9a44cee SHA1 dfe1ae404b9494d8b4b163658adb688ba0008bec SHA256 b0e3cb59e605412a52352cf9cf36344b165463d4e65916c95deb73fc51838272
-EBUILD libcanberra-0.10.ebuild 1772 RMD160 5ff4d9f0a30e08779c96ff8ebf935e4339254745 SHA1 82530df3385473c0cd82eec9f7f581d7d3a7b07b SHA256 f6f7cafdfc87a3577bccb170aa86e49b4988563b4d5a75ad2916b497b91676be
-MISC ChangeLog 1171 RMD160 6b38914a3165c7b1a803aec82d103f236c3da223 SHA1 d410b197c80117a30e1d544a8a17a623a8981644 SHA256 d7c4042402f7ab9d63d0f48ca077a0d18511e17c961a6069162a693ae578fb6f
+DIST libcanberra-0.11.tar.gz 530273 RMD160 77a38ec12d0c9e5f2ee460fc2150298a81e595c7 SHA1 009b0c914970bf6f0fa19158483b6f7dfdf7021f SHA256 ea7c2731e31c77cdaa2a1319dff3bf9e4ee26a51e9ade8d2dec3147c28ce2e6d
+EBUILD libcanberra-0.10.ebuild 1773 RMD160 c6f51b8e4f3ec6cea87e942a054bf01851c1494f SHA1 dca7a000144b3d8220605e3d48032b6c0cd8debb SHA256 1403a37c5a5c0cc643502d0dab826aa7db5bc96fe732ae631ed66ad4590e620c
+EBUILD libcanberra-0.11.ebuild 1776 RMD160 ec2aa59e81a7385d787a0975df0c04fa074cc539 SHA1 c81d20aee15a2ac89be9d9003383c18872739763 SHA256 5874afd40cc88d4ae22b33171808236cc754c98d63e6c93e94b67842234be4c7
+MISC ChangeLog 1455 RMD160 bdd43b87ecf7a03e4c1ffae55c09c06949c9b902 SHA1 c9d401ff7df8ced3c1051b1e2bc7cb429ef887ca SHA256 66890c9b3e06810ee6becbd4b7bbaa88c3e57722625c619edf63506ccefb792f
 MISC metadata.xml 1022 RMD160 89b9e49f7b7947e3518d5f58200f968f81e979d0 SHA1 060fc19cc9434e073ca31ebe6326e975a52564cf SHA256 8f31b433f98332004cd0d74e9d706495de2ba9db4bdecb8dbf9c2dea54913a95
