@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libcanberra/libcanberra-0.10.ebuild,v 1.6 2009/02/11 08:48:36 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libcanberra/libcanberra-0.11.ebuild,v 1.1 2009/02/11 22:58:02 eva Exp $
 
 EAPI="prefix 1"
 
@@ -13,7 +13,7 @@ SRC_URI="http://0pointer.de/lennart/projects/${PN}/${P}.tar.gz"
 LICENSE="LGPL-2.1"
 SLOT="0"
 KEYWORDS="~amd64-linux ~x86-linux"
-IUSE="alsa doc gstreamer +gtk pulseaudio"
+IUSE="alsa doc gstreamer +gtk oss pulseaudio"
 
 RDEPEND="media-libs/libvorbis
 	sys-devel/libtool
@@ -30,11 +30,11 @@ DEPEND="${RDEPEND}
 src_compile() {
 	econf --disable-static \
 		$(use_enable alsa) \
-		$(use_enable gtk) \
-		$(use_enable pulseaudio pulse) \
 		$(use_enable gstreamer) \
+		$(use_enable gtk) \
+		$(use_enable oss) \
+		$(use_enable pulseaudio pulse) \
 		$(use_enable doc gtk-doc) \
-		--disable-oss \
 		--disable-tdb \
 		--disable-lynx
 	# tdb support would need a split-out from samba before we can use it
